[gd_scene load_steps=5 format=3 uid="uid://dosq8qqhso14o"]

[ext_resource type="Script" uid="uid://cvqcclu7hb256" path="res://Scenes/kill_deserters.gd" id="1_q2bmm"]
[ext_resource type="Script" path="res://alien.gd" id="1_x5va2"]
[ext_resource type="Texture2D" uid="uid://beejgwjjyanr4" path="res://Assets/Sprites/aliens.png" id="2_q2bmm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q2bmm"]

[node name="KillDeserters" type="Node2D"]
script = ExtResource("1_q2bmm")

[node name="Alien" type="RigidBody2D" parent="."]
rotation = 3.14159
script = ExtResource("1_x5va2")

[node name="AlienSprite" type="Sprite2D" parent="Alien"]
scale = Vector2(0.065, 0.065)
texture = ExtResource("2_q2bmm")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Alien"]
shape = SubResource("CircleShape2D_q2bmm")

[node name="BannerTimer" type="Timer" parent="."]

[node name="AlarmTimer" type="Timer" parent="."]

[connection signal="timeout" from="BannerTimer" to="." method="_on_banner_timer_timeout"]
[connection signal="timeout" from="AlarmTimer" to="." method="_on_alarm_timer_timeout"]
